# openakita

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  README_CN.md  _commit_msg.txt  _exploratory_test_report.md  _fix_round3_deploy_report.md  _m1_w2_bench.json  _m1_w2_xltpl_benchmark.md  _m2_closing_report.md  _m3_raw_ai_completion_report.md  pyproject.toml  requirements.txt
.cursor/rules/: plugin-tool-classes.mdc  skipped-items-guidance.mdc
.github/: optional-assets.json
.github/workflows/: ci.yml  docker-publish.yml  finance-auto-ci.yml  mobile.yml  publish-release.yml  release-dryrun.yml  release.yml
_audit_lib/: README.md  __init__.py  log_grep.py  timeouts.py
apps/setup-center/: README.md  capacitor.config.ts  package-lock.json  package.json  playwright.config.ts  playwright.finance-auto.config.ts  vite.config.ts  vitest.config.ts
apps/setup-center/src-tauri/: Cargo.toml  tauri.conf.json  tauri.package-win.json
apps/setup-center/src-tauri/capabilities/: default.json
apps/setup-center/src-tauri/resources/bootstrap/: manifest.json
apps/setup-center/src-tauri/src/: finance.rs  main.rs
apps/setup-center/src-tauri/windows/: hooks.nsh  installer.nsi
auth_api/: auth_core.py  rate_limiter.py  user_db.py
cloud/aliyun-feedback-function/: index.py
data/: orgs_v2.json.deprecated.20260528
deliverables/: competitor-analysis-matrix.md  openakita-competitor-analysis-report.md
docker/: Dockerfile  docker-compose.yml
docs/: DINGTALK_IM_NOTES.md  README.md  TELEGRAM_IM_NOTES.md  WECHAT_IM_NOTES.md  WEWORK_WS_IM_NOTES.md  aigc-video-studio-test-plan.md  asset-kinds.md  configuration-guide.md  desktop-app-guide.md  im-channels-upgrade-plan.md  im-channels.md  memory_migration_v4.md  plugin-context-cheatsheet.md  plugin-overhaul-template.md  plugin-system-overview.md  plugin-tool-classes-howto.md  policy_v2_research.md  release-playbook.md  skill-usage-guide.md
docs/adr/: 0001-fork-style-rewrite.md  0002-runtime-architecture.md  0003-agent-architecture.md  0004-dual-ledger-supervisor.md  0005-checkpoint-contract.md  0006-stream-channels-schema.md  0007-node-protocol-and-types.md  0008-template-registry.md  0009-plugin-workbench-manifest.md  0010-data-migration.md  0011-org-subsystem-decomposition.md  0012-orgs-deletion-strategy.md  0013-wall-clock-sla-tests.md  0014-orgruntime-budget-revision.md  0015-308-shim-retirement-governance.md  README.md
docs/api/: openapi-surface.md
docs/architecture/: context-continuity.md  conversation_concurrency.md  s5b_checklist.md
docs/examples/: api_converter_example.py
docs/follow-ups/: project-gantt-design.md  skipped-items-roadmap.md
docs/release-notes/: v1.28.md
docs/revamp/: ACCEPTANCE.md  LOC_BASELINE.json  MERGE_TO_MAIN_v2.md  P-RC-10-CHARTER.md  P-RC-10-CHARTER.md.archived  P-RC-10-RECON.md  P-RC-11-CHARTER.md  P-RC-11-RECON.md  P-RC-9-CHARTER.md  P-RC-9-P9.7-CHARTER.md  P-RC-9-P9.7-DECISIONS.md  P-RC-9-P9.7-ENDPOINT-INVENTORY.md  P-RC-9-P9.8-CALLER-INVENTORY.md  P-RC-9-P9.8-CHARTER.md  P-RC-9-P9.9-CHARTER.md  P-RC-9-P9.9-COVERAGE-AUDIT.md  P-RC-9-P9.9-IMPORT-SWEEP-INVENTORY.md  P-RC-9-P9.9-ε-AUDIT.md  P-RC-9-P9.9-ε-CHARTER.md  P-RC-9-PLAN.md  P-RC-9-RECON.md  PAUSE_CHECKPOINT_P9.md  PLAN_AUDIT.md  PROGRESS_LEDGER.md  PROGRESS_LEDGER_P10.md  PROGRESS_LEDGER_P11.md  PROGRESS_LEDGER_P9.md  Q_DECISIONS.md  RELEASE_v2.md  STATUS.md  burn_in.md  core_audit.md  rollback.md
examples/: .env.example
identity/: POLICIES.yaml
identity/runtime/: agent.behavior.md  agent.tooling.md  identity.core.md  identity.longform.index.md  user.profile.core.md
mcps/: README.md
mcps/chrome-devtools/: INSTRUCTIONS.md  SERVER_METADATA.json
openakita-plugin-sdk/: README.md  pyproject.toml
openakita-plugin-sdk/docs/: README.md  cross-ecosystem.md  dependency-gate.md  getting-started.md  hooks.md  permissions.md  plugin-i18n-and-uikit-migration.md  plugin-json.md  protocols.md  rest-api.md  testing.md
openakita-plugin-sdk/tests/: test_skill_loader.py
plugins-archive/_shared/: quality_gates.py  verification.py
plugins-archive/avatar-speaker/: plugin.json
plugins-archive/bgm-mixer/: plugin.json
plugins-archive/bgm-suggester/: plugin.json
plugins-archive/dub-it/: plugin.json
plugins-archive/highlight-cutter/: plugin.json
plugins-archive/image-edit/: plugin.json
plugins-archive/local-sd-flux/: plugin.json
plugins-archive/poster-maker/: plugin.json
plugins-archive/ppt-to-video/: plugin.json
plugins-archive/shorts-batch/: plugin.json
plugins-archive/smart-poster-grid/: plugin.json
plugins-archive/storyboard/: plugin.json
plugins-archive/subtitle-maker/: plugin.json
plugins-archive/transcribe-archive/: plugin.json
plugins-archive/tts-studio/: plugin.json
plugins/dub-it/: plugin.json
scripts/: audit_tool_classes.py  backfill_versions.py  build_cache_key.py  cleanup_memory_db.py  cleanup_releases.py  concurrency_telemetry_analyzer.py  deploy.ps1  deploy.sh  generate_latest_json.py  generate_release_manifest.py  generate_skill_i18n.py  lint_builtin_skills.py  llm_diag.py  llm_latency_benchmark.py  migrate_memories.py  migrate_non_ascii_template_ids.py  migrate_orgs_to_v2.py  migrate_orgs_v2_json_to_sqlite.py  package_chat_smoke.py  prepare_optional_assets.py  prepare_tauri_binary.py  release_contract.py  revamp_commit_guard.py  revamp_loc_audit.py  run_org_live_test.py  run_telegram_bot.py  run_tests.py  test_17_changes.py  test_cli_session_unify.py  test_feishu.py  test_llm_integration.py  test_memory_e2e.py  test_memory_e2e_v2.py  test_memory_e2e_v3.py  test_model_switch.py  test_org_full_task.py  tool_parallel_demo.py  update_task_tools.py  version.py
skills/: ATTRIBUTION.md  README.md  catalog.json
tests/: conftest.py  test_cancel.py  test_concurrent_streaming.py  test_memory_interaction.py  test_module_deps.py  test_new_features.py  test_refactoring.py  test_scheduler_detailed.py  test_telegram_simple.py
tmp_p10/: _banner_diag.md  _banner_verify.md  _smoke_manual_checklist.md  _smoke_manual_checklist_en_backup.md
tools/: audit_tauri_lifecycle.py  recover_sessions.py
(+2988 files in other folders)
