[project]
name = "openakita"
version = "1.27.26"
description = "全能自进化AI Agent - 基于Ralph Wiggum模式，永不放弃"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.11"
authors = [
    { name = "OpenAkita", email = "zacon365@gmail.com" }
]
keywords = ["ai", "agent", "claude", "autonomous", "self-evolving"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core LLM
    "anthropic>=0.40.0",
    "openai>=1.0.0",

    # MCP (Model Context Protocol)
    "mcp>=1.0.0",

    # Web Search
    "ddgs>=8.0.0",

    # CLI and UI
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
    "typer>=0.12.0,<1",

    # Async and HTTP
    "httpx[socks]>=0.27.0",
    "aiohttp>=3.13.0",
    "aiofiles>=24.1.0",
    "nest-asyncio>=1.5.0",

    # Database
    "aiosqlite>=0.20.0",

    # Data validation
    "pydantic>=2.5.0,<3",
    "pydantic-settings>=2.1.0",

    # Git operations
    "gitpython>=3.1.40",

    # YAML for config
    "pyyaml>=6.0.1",

    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.3",
    "simplejson>=3.19.2",
    # C17: cross-process audit / scheduler / event_store locking.
    "filelock>=3.13.0",

    # HTTP API (serve mode + Desktop Terminal)
    "fastapi>=0.110.0,<1",
    "uvicorn>=0.27.0",

    # IM Channels - Telegram (default)
    "python-telegram-bot>=22.7",

    # Browser automation (built-in)
    "playwright>=1.40.0",

    # Image processing
    "Pillow>=10.0.0",

    # HTML parsing for media-strategy plugin sources
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
# 飞书 IM 通道
feishu = [
    "lark-oapi>=1.6.2",         # 2026 上游版本，含消息/事件/卡片 API 更新
    "qrcode>=8.0",
]

# 钉钉 IM 通道 (Stream 模式)
dingtalk = [
    "dingtalk-stream>=0.24.3",
]

# 企业微信 IM 通道
wework = [
    "aiohttp>=3.13.0",          # 多个 CVE 修复 + 性能改进
    "pycryptodome>=3.23.0",     # ARM64 wheel + AES-GCM 性能 + 安全更新
]

# 企业微信 WebSocket 长连接通道
wework_ws = [
    "websockets>=15.0,<16.0",   # 兼容 lark-oapi(<16) 且保留 additional_headers API
    "cryptography>=46.0.7",     # 补丁级安全更新
]

# OneBot 协议通道 (NapCat/Lagrange 等)
onebot = [
    "websockets>=15.0,<16.0",
]

# QQ 官方机器人
# 注意：QQ 官方 API 已支持 silk/wav/mp3/flac 直接上传（2024+），
# 发送语音不再需要 pilk 编码。如需接收/转写用户发送的 SILK 语音
# （由 src/openakita/channels/media/audio_utils.py 处理），请额外
# `pip install pilk` 或安装 voice extra。
qqbot = [
    "websockets>=15.0,<16.0",   # QQ Gateway WebSocket 连接；需兼容 lark-oapi(<16)
    "aiohttp>=3.13.0",          # Webhook 模式 HTTP 回调服务器
]

# 微信个人号 (iLink Bot API)
wechat = [
    "pycryptodome>=3.23.0",
]

# 语音接收/转写支持（QQ + 微信用户发来的 SILK v3 语音 → WAV）
# 仅在需要语音转写功能时安装；不影响发送侧（QQ send_voice 已不依赖 pilk）。
voice = [
    "pilk>=0.2.1",
]

# 一等公民插件依赖的最小 SDK 版本
# (plugins/tongyi-image / plugins/seedance-video — 它们 import
# `from openakita_plugin_sdk import PluginBase, PluginAPI, ...` 等核心类)。
# Monorepo 开发时 src/openakita/plugins/sdk_loader.py 会兜底注入本地源码;
# 这里是给 pip-install 场景显式声明的最低版本。
# Note: 0.7.0 主动收缩了 SDK API surface (移除了 contrib 子包),
# 旧版本 0.3.x–0.6.x 上的 contrib 调用都已迁出 (见 CHANGELOG)。
plugins = [
    "openakita-plugin-sdk>=0.7.0",
]

# Windows 桌面自动化
windows = [
    "mss>=9.0.0",
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.8; platform_system == 'Windows'",
    "pyperclip>=1.8.2",
    "psutil>=5.9.0",
]

# 桌面运行时依赖（Tauri Setup Center 默认安装到 app-venv）
# 包含运行 OpenAkita 桌面后端所必需的默认能力：
#   - 桌面交互所需进程/剪贴板工具
#   - Windows 平台自动化（仅在 Windows 上生效，靠 marker 控制）
# 不强制拉所有 IM 通道依赖；channel deps 由 Tauri runtime manager / channel
# bootstrap 在 agent-venv / app-venv 按需安装。
desktop = [
    "openakita-plugin-sdk>=0.7.0",
    "websockets>=15.0,<16.0",
    "psutil>=5.9.0",
    "pyperclip>=1.8.2",
    "mss>=9.0.0; platform_system == 'Windows'",
    "pyautogui>=0.9.54; platform_system == 'Windows'",
    "pywinauto>=0.6.8; platform_system == 'Windows'",
]

# 全部可选依赖（core + 所有 IM 通道 + 桌面自动化 + 插件 SDK）
all = [
    # -- IM 通道 --
    "lark-oapi>=1.6.2",
    "dingtalk-stream>=0.24.3",
    "aiohttp>=3.13.0",
    "pycryptodome>=3.23.0",
    "websockets>=15.0,<16.0",
    "cryptography>=46.0.7",
    "pilk>=0.2.1",  # 语音接收/转写（QQ/微信 SILK 解码），发送不再需要
    # -- 桌面自动化 --
    "mss>=9.0.0",
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.8; platform_system == 'Windows'",
    "pyperclip>=1.8.2",
    "psutil>=5.9.0",
    # -- AI 媒体插件脚手架（保持与 [project.optional-dependencies].plugins 同步）--
    "openakita-plugin-sdk>=0.7.0",
]

# 财务自动化插件（plugins/finance-auto）运行时依赖
# 保持与 `plugins/finance-auto/requirements.txt` 同步。
# 用法： pip install -e ".[finance-auto]"
# 关闭审计项 EX-P1-5（_finance_plugin_audit_extended_report.md）。
finance-auto = [
    "openpyxl>=3.1.5,<4.0",        # .xlsx Tier 1 解析
    "xlrd==1.2.0",                 # .xls Tier 2（2.x 已移除 .xls 支持，故锁定）
    "xltpl>=0.20,<1.0",            # 审计模板 .xlsx 渲染（PyPI 当前 HEAD = 0.21）
    "keyring>=24.0,<26.0",         # OS keyring（Windows Credential Manager / macOS Keychain / Secret Service）
    "pywin32>=306; sys_platform == 'win32'",  # .xls Tier 3 COM fallback（Windows-only）
    "cryptography>=42.0,<46.0",    # AES-256-GCM + PBKDF2-HMAC-SHA256
]

# 开发依赖
dev = [
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.23.0,<1",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pyright>=1.1.0",
]

[project.scripts]
openakita = "openakita.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "src/openakita",
    "skills",
    "mcps",
    "identity",
    "VERSION",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openakita"]
artifacts = [
    # Optional release assets staged by `python scripts/stage_package_assets.py`.
    # They are intentionally package-local build outputs so default
    # `python -m build` / `pip install .` do not require Node/VitePress outputs.
    "src/openakita/web/**",
    "src/openakita/docs_dist/**",
]

# 把仓库根目录的系统技能、外部技能、内置 MCP 配置一并打进 wheel，
# 保证 `pip install openakita` 后可用。
# skills/system → site-packages/openakita/builtin_skills/system/
# skills/*      → site-packages/openakita/builtin_skills/external/  (不含 system/)
# mcps          → site-packages/openakita/builtin_mcps/
[tool.hatch.build.targets.wheel.force-include]
"skills/system" = "openakita/builtin_skills/system"
"mcps" = "openakita/builtin_mcps"
"skills/xiaohongshu-creator" = "openakita/builtin_skills/external/xiaohongshu-creator"
"skills/wechat-article" = "openakita/builtin_skills/external/wechat-article"
"skills/chinese-writing" = "openakita/builtin_skills/external/chinese-writing"
"skills/chinese-novelist" = "openakita/builtin_skills/external/chinese-novelist"
"skills/douyin-tool" = "openakita/builtin_skills/external/douyin-tool"
"skills/youtube-summarizer" = "openakita/builtin_skills/external/youtube-summarizer"
"skills/bilibili-watcher" = "openakita/builtin_skills/external/bilibili-watcher"
"skills/summarizer" = "openakita/builtin_skills/external/summarizer"
"skills/obsidian-skills" = "openakita/builtin_skills/external/obsidian-skills"
"skills/knowledge-capture" = "openakita/builtin_skills/external/knowledge-capture"
"skills/notebooklm" = "openakita/builtin_skills/external/notebooklm"
"skills/pretty-mermaid" = "openakita/builtin_skills/external/pretty-mermaid"
"skills/ppt-creator" = "openakita/builtin_skills/external/ppt-creator"
"skills/baoyu-image-gen" = "openakita/builtin_skills/external/baoyu-image-gen"
"skills/apify-scraper" = "openakita/builtin_skills/external/apify-scraper"
"skills/translate-pdf" = "openakita/builtin_skills/external/translate-pdf"
"skills/yuque-skills" = "openakita/builtin_skills/external/yuque-skills"
"skills/todoist-task" = "openakita/builtin_skills/external/todoist-task"
"skills/baoyu-infographic" = "openakita/builtin_skills/external/baoyu-infographic"
"skills/baoyu-cover-image" = "openakita/builtin_skills/external/baoyu-cover-image"
"skills/baoyu-comic" = "openakita/builtin_skills/external/baoyu-comic"
"skills/baoyu-article-illustrator" = "openakita/builtin_skills/external/baoyu-article-illustrator"
"skills/baoyu-slide-deck" = "openakita/builtin_skills/external/baoyu-slide-deck"
"skills/baoyu-format-markdown" = "openakita/builtin_skills/external/baoyu-format-markdown"
"skills/baoyu-url-to-markdown" = "openakita/builtin_skills/external/baoyu-url-to-markdown"
"skills/superpowers-brainstorming" = "openakita/builtin_skills/external/superpowers-brainstorming"
"skills/superpowers-tdd" = "openakita/builtin_skills/external/superpowers-tdd"
"skills/superpowers-debugging" = "openakita/builtin_skills/external/superpowers-debugging"
"skills/superpowers-verification" = "openakita/builtin_skills/external/superpowers-verification"
"skills/superpowers-dispatching-agents" = "openakita/builtin_skills/external/superpowers-dispatching-agents"
"skills/superpowers-executing-plans" = "openakita/builtin_skills/external/superpowers-executing-plans"
"skills/superpowers-finishing-branch" = "openakita/builtin_skills/external/superpowers-finishing-branch"
"skills/superpowers-receiving-review" = "openakita/builtin_skills/external/superpowers-receiving-review"
"skills/superpowers-requesting-review" = "openakita/builtin_skills/external/superpowers-requesting-review"
"skills/superpowers-subagent-dev" = "openakita/builtin_skills/external/superpowers-subagent-dev"
"skills/superpowers-git-worktrees" = "openakita/builtin_skills/external/superpowers-git-worktrees"
"skills/superpowers-workflow" = "openakita/builtin_skills/external/superpowers-workflow"
"skills/superpowers-writing-plans" = "openakita/builtin_skills/external/superpowers-writing-plans"
"skills/superpowers-writing-skills" = "openakita/builtin_skills/external/superpowers-writing-skills"

# Identity templates: shipped as bundled examples so the setup wizard can
# seed the user-customizable identity/*.md files on first install. The
# wizard's `_resolve_identity_template` looks up these paths under the
# installed `openakita` package directory when no repo checkout is on the
# Python path (i.e. for `pip install openakita` users). Without this
# block, wheel-installed users would fall through to the prompt builder's
# 5-line `_STATIC_FALLBACKS["identity_core"]` template instead of the
# full SOUL.md / AGENT.md / persona library shipped with the project.
#
# User-customizable runtime state (SOUL.md, AGENT.md, USER.md, MEMORY.md,
# identity/runtime/**, identity/personas/user_custom.md) is intentionally
# NOT packaged: those files are gitignored and live in the user's project
# directory; the wizard copies these *.example/*.template files there on
# first run.
"identity/SOUL.md.example" = "openakita/identity/SOUL.md.example"
"identity/AGENT.md.example" = "openakita/identity/AGENT.md.example"
"identity/USER.md.example" = "openakita/identity/USER.md.example"
"identity/MEMORY.md.example" = "openakita/identity/MEMORY.md.example"
"identity/POLICIES.yaml" = "openakita/identity/POLICIES.yaml"
"identity/CREDITS.md" = "openakita/identity/CREDITS.md"
"identity/SYSTEM_TASKS.yaml.template" = "openakita/identity/SYSTEM_TASKS.yaml.template"
"identity/personas/boyfriend.md" = "openakita/identity/personas/boyfriend.md"
"identity/personas/business.md" = "openakita/identity/personas/business.md"
"identity/personas/butler.md" = "openakita/identity/personas/butler.md"
"identity/personas/default.md" = "openakita/identity/personas/default.md"
"identity/personas/family.md" = "openakita/identity/personas/family.md"
"identity/personas/girlfriend.md" = "openakita/identity/personas/girlfriend.md"
"identity/personas/jarvis.md" = "openakita/identity/personas/jarvis.md"
"identity/personas/tech_expert.md" = "openakita/identity/personas/tech_expert.md"
"identity/personas/user_custom.md.example" = "openakita/identity/personas/user_custom.md.example"
"identity/prompts/policies.md" = "openakita/identity/prompts/policies.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line length handled by formatter; keep ignored
    "E402",   # module-level import not at top (circular-import avoidance, conditional init)
    "B005",   # strip with multi-char strings (intentional character set removal)
    "B008",   # function call in default argument (standard FastAPI File/Depends pattern)
    "B027",   # empty method without abstract decorator (optional-override stubs)
    "B904",   # require `raise ... from err` inside except (too noisy for now)
    "N806",   # non-lowercase variable in function (constants in functions, third-party patterns)
    "N814",   # CamelCase imported as constant (local alias pattern like `IntentType as _IT`)
    "N818",   # exception name should end with Error (renaming would break existing API)
    "SIM102", # collapsible-if (style-only)
    "SIM103", # needless-bool (style-only)
    "SIM105", # prefer contextlib.suppress (style-only)
    "SIM116", # dict-lookup instead of if-chain (less readable in some contexts)
]

[tool.ruff.lint.per-file-ignores]
"src/openakita/integrations/**" = ["F401", "F821", "SIM117", "E722", "UP035"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_any_generics = false
warn_return_any = false
warn_unused_ignores = true
no_implicit_optional = true
ignore_errors = true
disable_error_code = [
    "attr-defined",
    "call-arg",
    "no-any-return",
    "union-attr",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Skip perf tests by default; CI calls them explicitly with ``-m perf``
# or ``-m "perf or not perf"``. See tests/perf/test_policy_v2_perf.py
# (C22 P3-3) for rationale.
addopts = "--ignore=tests/legacy/test_refactoring.py --ignore=tests/test_refactoring.py -m 'not perf'"
markers = [
    "perf: SLO / performance baseline tests; deselected by default. Run with `pytest -m perf` or override via `--override-ini=addopts=`.",
    "integration: tests that require external services or local system dependencies",
]
