[package]
name = "openakita-setup-center"
version = "1.27.26"
description = "OpenAkita Setup Center"
authors = ["OpenAkita"]
license = "AGPL-3.0-only"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }
base64 = "0.22.1"
flate2 = "1.0.35"

[dependencies]
# TODO(tao#1180): Tauri 2.10.x 锁死 tao 0.34.x，仍存在 Windows 事件循环
# "cannot move state from Destroyed" panic（详见 https://github.com/tauri-apps/tao/issues/1180）。
# 上游 tao 修复后请升级 Tauri/tao 验证 panic 不再出现，
# 然后移除 src/main.rs 中的 try_self_heal_relaunch / restart.marker 自愈逻辑。
tauri = { version = "2.10.1", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = { version = "2", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs-next = "2.0.0"
reqwest = { version = "0.12.12", features = ["blocking", "json", "rustls-tls"] }
flate2 = "1.0.35"
tar = "0.4.41"
zip = "2.2.2"
base64 = "0.22.1"
getrandom = "0.3"

once_cell = "1"
# Direct dep so we can use tokio::time::timeout for backend_fetch chunk
# inactivity. tokio is already pulled in transitively by reqwest/tauri at
# 1.50.x; declaring it here just makes the `time` feature explicit.
tokio = { version = "1", features = ["time"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
# Used by src/crash_handler.rs to install SetUnhandledExceptionFilter +
# MiniDumpWriteDump for native crashes (0xc0000005 / 0xc0000374 / 0xc000001d).
# Dumps land in ~/.openakita/crashdumps/openakita-{pid}-{ts}.dmp and are
# auto-packaged by build_feedback_zip so users can submit them via the
# normal "send feedback" flow without admin rights or HKLM LocalDumps.
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Kernel",
  "Win32_System_Memory",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
] }

